<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Name Here</string>
    <string-array name="web_address_types">
        <item>Please Select</item>
        <item>Default (Thingsboards)</item>
        <item>Custom Address</item>
    </string-array>
    <string-array name="connection_types">
        <item>Please Select</item>
        <item>HTTP Connection</item>
        <item>MQTT Connection</item>
    </string-array>
    <string name="website_address_type">Select Address Type:</string>
    <string name="website_address">Enter Web Address:</string>
    <string name="website_token">Enter Access Token:</string>
    <string name="website_connection_type">Select Connection Type:</string>
    <string name="website_input_hint"><font size="14">"thingsboard.nameHere.com"</font></string>
    <string name="token_input_hint">"ThingsBoardTokenHere"</string>
    <string name="connnection_setup">"Connection Setup"</string>
    <string name="connnection_setup_note">"NOTE: You must enter the information below to allow for data to be sent."</string>
    <string name="please_confirm_note">"Please confirm that the text below is correct. Then click confirm."</string>
    <string name="connnection_btn">"Enter"</string>
    <string name="cancel_btn">"Clear Text"</string>
    <string name="confirm_btn">"Comfirm"</string>
    <string name="change_connnection_setup">"Change Connection Setup"</string>
    <string name="set_frequency">Set transmission frequency</string>
    <string name="frequency_setup">"Frequency Setup"</string>
    <string name="frequency_setup_note">"NOTE: Please select how often you wish to sent data from the selected sensor"</string>
    <string name="selected_sensor_to_set_frequency">Sensor:</string>
    <string name="select_frequency_units">Select Units:</string>
    <string name="select_frequency">Select Frequency:</string>
    <string name="selected_seconds">"Seconds"</string>
    <string name="selected_milliseconds">"Milliseconds"</string>
    <string name="BT_Devices_list_title">"Nearby Bluetooth Devices"</string>
    <string name="action_change_access_token">Change Experiment Setup</string>
    <string name="BT_button">"Search Bluetooth Device"</string>
    <string name="comment">"Just a divder with color"</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_archive_experiment">Archive experiment</string>
    <string name="action_unarchive_experiment">Unarchive experiment</string>
    <string name="action_archive_run">Archive trial</string>
    <string name="action_unarchive_run">Unarchive trial</string>
    <string name="action_delete">Delete</string>
    <string name="action_ruler">Ruler</string>
    <string name="action_level">Level</string>
    <string name="sine_wave">Sine wave</string>
    <string name="acc_x">Accelerometer X</string>
    <string name="acc_y">Accelerometer Y</string>
    <string name="acc_z">Accelerometer Z</string>
    <string name="ambient_light">Ambient light</string>
    <string name="magnetic_field_strength">Magnetometer</string>
    <string name="barometer">Barometer</string>
    <string name="ambient_temperature">Ambient temperature</string>
    <string name="ambient_temerature_stag" translatable="false">Sensor Tag Ambient temperature(°C)</string>
    <string name="barometer_stag" translatable="false">Sensor Tag Barometer </string>
    <string name="humidity_stag" translatable="false">Sensor Tag Humidity (%)</string>
    <string name="ambient_light_stag" translatable="false">Sensor Tag Ambient light(LUX)</string>
    <string name="humidity_unit" translatable="false">RH</string>
    <string name="video_stream">Video stream</string>
    <string name="acc_units">m/s\u00B2</string>
    <string name="ambient_light_units">lux</string>
    <string name="magnetic_strength_units">μT</string>
    <string name="decibel_units">dB</string>
    <string name="rpm_units">RPM</string>
    <string name="voltage_units">V</string>
    <string name="raw_units">%</string>
    <string name="barometer_units">hPa</string>
    <string name="temperature_units">\u00B0C</string>
    <string name="header_name_and_units"><xliff:g id="sensor_name">%1s</xliff:g> (<xliff:g id="sensor_units">%2s</xliff:g>)</string>
    <string name="experiment_details">Experiment details</string>
    <string name="add_sensor" translatable="false">@string/title_activity_sensor_settings</string>
    <string name="snackbar_source_error">Error occurred when connecting to this source: <xliff:g id="error_text">%1s</xliff:g></string>
    <string name="action_retry">Retry</string>
    <string name="decibel">Sound intensity</string>
    <string name="title_activity_age_verifier">Birthday</string>
    <string name="title_activity_ruler">Ruler</string>
    <string name="ruler_label_metric"><xliff:g id="length_value">%1$.2f</xliff:g> mm</string>
    <string name="ruler_label_imperial"><xliff:g id="length_value">%1$.2f</xliff:g> in</string>
    <string name="title_activity_level">Level</string>
    <string name="action_calibrate">Calibrate</string>
    <string name="action_end_calibrate">End calibration</string>
    <string name="title_calibrate">Calibrate with\u2026"</string>
    <string name="calibration_credit_card">Credit card (height)</string>
    <string name="calibration_ruler_imperial">Ruler (3in)</string>
    <string name="calibration_ruler_metric">Ruler (80mm)</string>
    <string name="btn_add_experiment_note_description">Add experiment note</string>
    <string name="btn_add_run_note_description">Add trial note</string>
    <string name="btn_record_description">Start recording</string>
    <string name="btn_stop_description">Stop recording</string>
    <string name="unknown_sensor">Unknown sensor</string>
    <string name="recording_start_failed">Recording could not be started, please try again</string>
    <string name="recording_start_failed_disconnected">Cannot start recording because a sensor is disconnected. Please try again.</string>
    <string name="recording_stop_failed_no_data_title">Data is not being recorded</string>
    <string name="recording_stop_failed_no_data">One or more of your sensors did not record any data. Would you like to cancel this recording?</string>
    <string name="recording_stop_failed_continue">Continue</string>
    <string name="recording_stop_failed_cancel">Cancel recording</string>
    <string name="recording_stop_failed_disconnected">Cannot stop recording because a sensor is disconnected. Would you like to cancel this recording?</string>
    <string name="recording_stop_failed_save">Could not stop recording or save trial. Please try again.</string>
    <string name="elapsed_time_short_format"><xliff:g id="seconds">%1d</xliff:g>s</string>
    <string name="elapsed_time_long_format"><xliff:g id="minutes">%1d</xliff:g>min <xliff:g id="seconds">%2d</xliff:g>s</string>
    <string name="accessible_elapsed_time_short_format"><xliff:g id="seconds">%1d</xliff:g> seconds</string>
    <string name="accessible_elapsed_time_long_format"><xliff:g id="minutes">%1d</xliff:g> minutes <xliff:g id="seconds">%2d</xliff:g> seconds</string>
    <string name="elapsed_time_axis_format_small"><xliff:g id="minutes">%1d</xliff:g>:<xliff:g id="seconds">%02d</xliff:g></string>
    <string name="elapsed_time_axis_format_large"><xliff:g id="hours">%1d</xliff:g>:<xliff:g id="minutes">%02d</xliff:g>:<xliff:g id="seconds">%02d</xliff:g></string>
    <string name="elapsed_time_axis_format_small_tenths"><xliff:g id="minutes">%1d</xliff:g>:<xliff:g id="seconds">%02d</xliff:g>.<xliff:g id="tenths">%1d</xliff:g></string>
    <string name="elapsed_time_axis_format_large_tenths"><xliff:g id="hours">%1d</xliff:g>:<xliff:g id="minutes">%02d</xliff:g>:<xliff:g id="seconds">%02d</xliff:g>.<xliff:g id="tenths">%1d</xliff:g></string>
    <string name="graph_exploring_seekbar_content_description"><xliff:g id="time">%1$s</xliff:g>, <xliff:g id="value">%2$s</xliff:g> <xliff:g id="units">%3$s</xliff:g>.</string>
    <string name="picture_note_description">Picture from recording</string>
    <string name="picture_note_preview_content_description">Picture note preview</string>
    <string name="navigation_item_activities">Activities</string>
    <string name="activities_url" translatable="false">https://makingscience.withgoogle.com/science-journal/activities?utm_source=android</string>
    <string name="navigation_item_settings">Settings</string>
    <string name="navigation_item_testing_options">Testing options</string>
    <string name="title_activity_main">Science Journal - <xliff:g id="section">%s</xliff:g></string>
    <string name="title_activity_sensor_settings">Sensor settings</string>
    <string name="external_devices_paired">Paired devices</string>
    <string name="external_devices_pairing">Pairing\u2026</string>
    <string name="external_devices_available">Available devices</string>
    <string name="external_devices_settings_forget">Forget</string>
    <string name="progress_scanning">Scanning\u2026</string>
    <string name="action_refresh">Refresh</string>
    <string name="no_options_title">No options for <xliff:g id="name">%1$s</xliff:g></string>
    <string name="no_options_message">No options can be set for <xliff:g id="name">%1$s</xliff:g></string>
    <string name="options_message">Set options for <xliff:g id="sensor_name">%1$s</xliff:g></string>
    <string name="sine_wave_frequency_option">Set sine wave frequency in milliseconds:</string>
    <string name="video_stream_fps_option">Set video stream recording rate in frames per second:</string>
    <string name="graph_name">the graph</string>
    <string name="graph_options">Graph options</string>
    <string name="graph_options_title">Graph options</string>
    <string name="graph_options_smoothness_edit">Smoothness</string>
    <string name="graph_options_window_edit">Blur size</string>
    <string name="graph_options_blur_edit">Blur type</string>
    <string name="graph_options_gaussian_sigma_edit">Standard deviation</string>
    <string name="blur_type_average">Average</string>
    <string name="blur_type_gaussian">Gaussian</string>
    <string name="graph_options_audio_feedback_enable">Enable audio</string>
    <string name="graph_options_audio_feedback_disable">Disable audio</string>
    <string name="stat_min">Minimum</string>
    <string name="stat_max">Maximum</string>
    <string name="stat_average">Average</string>
    <string name="stat_average_label">Average</string>
    <string name="stat_duration">Duration</string>
    <string name="stat_unknown">Unknown</string>
    <string name="btn_reset_description">Jump to now</string>
    <string name="export_action">Share</string>
    <string name="export_run_chooser_title">Save to\u2026</string>
    <string name="settings_version_title">Version</string>
    <string name="settings_open_source_title">Open source licenses</string>
    <string name="cannot_scan_message">
        To access external devices (“Science Journal Sensor”) using Science Journal, you must first
        turn on Bluetooth. In order to discover Science Journal Sensors, Android requires you to
        also grant permission to access your location because other Bluetooth devices may broadcast
        their location information during device discovery.  However, Science Journal will not
        store or use this location information, and Science Journal Sensors do not transmit
        location information.
    </string>
    <string name="btn_request_location">Turn on location access</string>
    <string name="btn_enable_bluetooth">Turn on Bluetooth</string>
    <string name="action_undo">Undo</string>
    <string name="choose_photo_button_text">Choose a photo</string>
</resources>