<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:layout_marginStart="0dp"
    android:layout_marginTop="0dp"
    android:layout_marginEnd="0dp"
    android:gravity="center_horizontal|center_vertical"
    android:minWidth="200dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/connection_setup_lbl"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center|center_horizontal"
        android:shadowColor="#404040"
        android:text="@string/connnection_setup"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/connection_note_lbl"
        android:layout_width="260dp"
        android:layout_height="125dp"
        android:gravity="center"
        android:text="@string/connnection_setup_note"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/connection_note_lbl2"
        android:layout_width="260dp"
        android:layout_height="125dp"
        android:layout_marginTop="-125dp"
        android:gravity="center|center_horizontal"
        android:text="@string/please_confirm_note"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/website_address_lbl"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/website_token"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/website_address_input_textbox"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:autofillHints=""
        android:ems="5"
        android:gravity="center"
        android:hint="@string/token_input_hint"
        android:inputType="text"
        android:textColorHint="#3F51B5"
        android:textSize="18sp"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/website_connection_type_lbl"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="@string/website_connection_type"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/connection_spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:entries="@array/connection_types" />

    <LinearLayout
        android:id="@+id/enter_box"
        android:layout_width="260dp"
        android:layout_height="110dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/enter_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_button"
            android:text="@string/connnection_btn"
            android:textColor="@color/text_color_black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cancelAndConfirmBtnBox"
        android:layout_width="260dp"
        android:layout_height="115dp"
        android:layout_marginTop="-110dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/cancel_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_button_2"
            android:text="@string/cancel_btn"
            android:textColor="@color/text_color_black" />

        <Button
            android:id="@+id/confirm_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/rounded_button"
            android:text="@string/confirm_btn"
            android:textColor="@color/text_color_black" />

    </LinearLayout>

</LinearLayout>