<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frequency_setup"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:layout_marginStart="0dp"
    android:layout_marginTop="0dp"
    android:layout_marginEnd="0dp"
    android:gravity="center_horizontal|center_vertical"
    android:minWidth="200dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/frequency_setup_lbl"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/frequency_setup"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/frequency_note_lbl"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/frequency_setup_note"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/selected_sensor_lbl"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/selected_sensor_to_set_frequency"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/selected_sensor_display_lbl"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="26sp" />


    <TextView
        android:id="@+id/frequency_units_lbl"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/select_frequency_units"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/sensor_spinner"
        android:layout_width="175dp"
        android:layout_height="25dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="70dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:minWidth="225dp"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/select_frequency_lbl"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/select_frequency"
        android:textSize="24sp" />

    <NumberPicker
        android:id="@+id/number_picker"
        android:layout_width="wrap_content"
        android:layout_height="125dp" />

    <NumberPicker
        android:id="@+id/number_picker2_because_number_pickers_are_stupid"
        android:layout_width="wrap_content"
        android:layout_height="125dp"
        android:layout_marginTop="-125dp" />

    <Button
        android:id="@+id/set_frequency_btn"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_button"
        android:text="@string/connnection_btn"
        android:textColor="@color/text_color_black" />

    </LinearLayout>

